fixed bg color and overall service component

--- a/vue/public/employee/index.html
+++ b/vue/public/employee/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang=""
+  style="
+    background-color: rgb(191, 215, 237)!important;
+  "
+>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
