working on client

--- a/vue/public/client/index.html
+++ b/vue/public/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=""
   style="
-    background-color: rgb(191, 215, 237)!important;
+    background-color: #0844a4!important;
   "
 >
   <head>
